# Zap-TLSProxy

./: .gitignore  README.md  client.js  tcp_passthrough.js
js/: client.js  index.js  package-lock.json  package.json  private-key.pem  tcp_passthrough.js
js/examples/: example.js  node_guardians.js  schemas.js  spotify.js
js/proxy/: proxy.js
js/src/: index.js
js/tests/: zapProxy.test.js
js/utils/: decrypter.py
rust/: .gitignore  Cargo.toml  rustfmt.toml
rust/client/: Cargo.toml
rust/client/examples/: basic.rs
rust/client/src/: client.rs  http.rs  lib.rs  main.rs  types.rs  utils.rs
rust/proxy/: Cargo.toml
rust/proxy/src/: main.rs
rust/tester/: Cargo.toml
rust/tester/src/: main.rs
