[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
openssl = "0.10"
hyper = { version = "0.14", features = ["full", "server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
regex = "1"
chrono = "0.4"
