[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = { version = "0.10", features = ["aes"] }
hex = "0.4"
openssl = "0.10"
chrono = "0.4"
regex = "1"
anyhow = "1.0"